<resources>
    <string name="app_name">DimCalculator</string>
    <string name="div">\u00F7</string>
    <string name="c">C</string>
    <string name="double_zero">0.0</string>
    <string name="zero">0</string>
    <string name="point">.</string>
    <string name="mul">*</string>
    <string name="minus">-</string>
    <string name="add">+</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="equal">=</string>
    <string name="ce">CE</string>
    <string name="DEL">⌫</string>
</resources>
